--- a/src/page/style.less
+++ b/src/page/style.less
@@ -22,3 +22,51 @@ img {
         }
     }
 }
+.room-content {
+    width: 960px;
+    min-height: 760px;
+    margin: 60px auto;
+    border: 1px solid #5e5e5e;
+    background: #e0e0e0;
+
+    .room-title {
+        line-height: 40px;
+        height: 40px;
+        padding: 0 10px;
+        border-bottom: 1px solid #5e5e5e;
+    }
+    .room-news-list-content {
+        float: left;
+        width: 80%;
+        border-right: 1px solid #5e5e5e;
+        height: 719px;
+
+        .news-list {
+            height: 600px;
+            background: white;
+            padding: 10px;
+            overflow-y: auto;
+        }
+        .news-send {
+            line-height: 30px;
+            padding: 10px 10px 0 10px;
+            border-top: 1px solid #5e5e5e;
+            text-align: right;
+        }
+    }
+    .room-person-list-content {
+        float: right;
+        width: 20%;
+
+        .person-total {
+            line-height: 30px;
+            height: 30px;
+            padding-left: 10px;
+            border-bottom: 1px solid #5e5e5e;
+        }
+        .person-list {
+            height: 688px;
+            background: white;
+        }
+    }
+}
